--- a/diagram.html
+++ b/diagram.html
@@ -1,20 +1,34 @@
-<html> 
-<head> 
-<script> 
-
-function changeImage()
-{
-var img = document.getElementById("image");
-img.src="images/test2";
-return false;
-}
-
-</script>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet"
+          href=
+"https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 </head>
+ 
 <body>
-<img id="image" src="images/test" />
-<br><br><br>
-<button id="clickme" onclick="changeImage();">Click to change image!</button>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                <h1 id="message">
+                    Book II Proposition 5 Diagram
+                </h1>
+                <img id="myImage" src="img/photo1.jpg">
+            </div>
+            <div class="col-md-3"></div>
+        </div>
+    </div>
+    <div class="button">
+        <button class="btn btn-warning" onclick=diagram1();>
+            Diagram 1
+        </button>
+        <button class="btn btn-success" onclick=diagram2();>
+            Diagram 2
+        </button>
+    </div>
 </body>
 </html>
